<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">tt2info</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_email">邮箱</string>

    <string name="prompt_passwd">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_toregister">前往注册</string>

    <string name="now">现在</string>

    <string name="follow_system">follow system</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="theme_day">日间模式</string>
    <string name="theme_night">夜间模式</string>

    <!--菜单项-->
    <string name="action_settings">设置</string>
    <string name="action_show">显示</string>
    <string name="action_Alldate">全部</string>
    <string name="action_1000">1000</string>
    <string name="action_100">100</string>
    <string name="action_clear">清除数据</string>
    <string name="action_clearAll">清除全部数据</string>
    <string name="action_clearSome">清除一个月前数据</string>

    <!-- settings. -->
    <string name="settings_category_basic">Basic</string>
    <string name="settings_title_auto_night_mode">Auto Night mode</string>
    <string name="settings_title_night_start_time">Night Mode Start Time</string>
    <string name="settings_title_night_end_time">Night Mode End Time</string>
    <string name="settings_title_language">Language</string>

    <!--share preferences-->
    <string name="key_auto_night_mode">auto_night_mode</string>
    <string name="key_night_start_time">night_start_time</string>
    <string name="key_night_end_time">night_end_time</string>
    <string name="key_language">language</string>
    <string name="action_about">关于</string>
    <string name="introduce">介绍</string>
    <string name="tt2info">tt2info</string>
    <string name="version_code">1.0.1</string>
    <string name="Github">GITHUB</string>

</resources>
