<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chii.tt2info.ui.activity.MainActivity">
    <item

        android:title="@string/action_show"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_show_100"
                android:title="@string/action_100" />
            <item
                android:id="@+id/action_show_1000"
                android:title="@string/action_1000" />
            <item
                android:id="@+id/action_show_all"
                android:title="@string/action_Alldate" />
        </menu>
    </item>
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="never" />
</menu>
