<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/about_app_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/about_app_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tt2info"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_about_header_versionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_appName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/version_code"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_about_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_about_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/item_about_app_icon"
            android:textStyle="bold"
            android:text="@string/Github"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/item_about_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_github" />
    </RelativeLayout>

</LinearLayout>