<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/register_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"

            app:srcCompat="@drawable/good_morning_img" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Good "
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/register_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Morning"
                android:textColor="#ffffff"
                android:textSize="32sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:drawableStart="@drawable/ic_person_black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/prompt_email"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:drawableStart="@drawable/ic_email_black"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_passwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/prompt_passwd"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:drawableStart="@drawable/ic_lock_black"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/button_shape"
                android:text="@string/action_register" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>